# SimpleMachineInterpreter

./: .gitignore  LICENSE  README.md
.github/workflows/: build-and-release.yml
examples/: Add.txt  Min.txt
research/: MS.hexpat
smi/: .clang-format  CMakeLists.txt
smi/include/: smi.h  smi_errors.h  smi_types.h
smi/src/: main.cpp
smi/src/api/: smi.cpp  smi_cast.cpp  smi_cast.h
smi/src/core/: ast.h  debugger.cpp  debugger.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  parser.cpp  parser.h  smierror.cpp  smierror.h
smi/src/core/ms/: compiler.cpp  compiler.h  decompiler.cpp  decompiler.h  mstypes.h
web/: configure.js  index.html  package.json  vite.config.js
web/src/: main.js  smi-worker.js  smi.js  style.css
